--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <title>deblocc</title>
   </head>
+  <meta name="title" content="deblocc">
+  <meta name="description" content="A decompiler for different blockchain VMs">
+  <meta name="keywords" content="aleo, ethereum, blockchain, evm, avm, decompiler, devtools">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
+  <meta name="revisit-after" content="5 days">
+  <meta name="author" content="Kanav Gupta">
   <body>
     <div id="root"></div>
     <script type="module" src="./src/index.tsx"></script>
